# appinventor-sources

./: .bazelrc  .gitignore  .gitmodules  CODEOWNERS  WORKSPACE  build.gradle  buildtools  buildtools.cmd  settings.gradle
.github/workflows/: diff.yml
aimerger/: build.gradle  settings.gradle
aimerger/gradle/wrapper/: gradle-wrapper.properties
aimerger_for_appinv_classic/: settings.gradle
aimerger_for_appinv_classic/gradle/wrapper/: gradle-wrapper.properties
appengine/: build.gradle  settings.gradle
appinventor/: build-common.xml  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
appinventor/aimerger_for_appinv_classic/: build.gradle
appinventor/appengine/: BUILD.bazel  build.xml
appinventor/appengine-backend/: build.gradle.kts
appinventor/appengine-frontend/: build.gradle.kts
appinventor/appengine-shared/: build.gradle.kts
appinventor/appengine/src/com/google/appinventor/client/editor/simple/: ComponentDatabase.java  MockComponentFactory.java  MockScriptsManager.java  MockVceManager.java
appinventor/appengine/src/com/google/appinventor/client/editor/simple/components/: MockButtonBase.java  MockCanvas.java  MockComponentsUtil.java  MockHVLayoutBase.java  MockSwitch.java  MockTableLayout.java  MockVisibleComponent.java  MockVisibleExtension.java
appinventor/appengine/src/com/google/appinventor/client/editor/simple/palette/: SimpleComponentDescriptor.java  SimplePaletteItem.java
appinventor/appengine/src/com/google/appinventor/client/editor/youngandroid/: YaProjectEditor.java
appinventor/appengine/src/com/google/appinventor/client/editor/youngandroid/i18n/: BlocklyMsg.java
appinventor/appengine/src/com/google/appinventor/client/editor/youngandroid/palette/: YoungAndroidPalettePanel.java
appinventor/appengine/src/com/google/appinventor/client/explorer/commands/: MiniProgressBar.java  PreviewFileCommand.java
appinventor/appengine/src/com/google/appinventor/client/widgets/dnd/: DragSourceSupport.java
appinventor/appengine/src/com/google/appinventor/server/: MockScriptsServlet.java
appinventor/appengine/src/com/google/appinventor/server/project/youngandroid/: YoungAndroidSettingsBuilder.java
appinventor/appengine/src/com/google/appinventor/shared/rpc/: ServerLayout.java
appinventor/appengine/src/com/google/appinventor/shared/rpc/admin/: AdminUser.java
appinventor/appengine/war/: VCE_SDK_template.jsp
appinventor/appengine/war/WEB-INF/: web.xml
appinventor/barcode/: build.gradle.kts
appinventor/blocklyeditor/: BUILD.bazel  build.gradle  ploverConfig.js
appinventor/blocklyeditor/src/msg/: BlocklyTranslationGenerator.java
appinventor/buildserver/: BUILD.bazel  build.gradle  build.gradle.kts  build.xml
appinventor/buildserver/src/com/google/appinventor/buildserver/: Compiler.java  JetifierTask.java  PathUtil.java
appinventor/buildserver/src/com/google/appinventor/buildserver/util/: AARLibrary.java
appinventor/buildserver/src/test/java/com/google/appinventor/buildserver/: YailEvalTest.java
appinventor/common/: BUILD.bazel  build.gradle  build.gradle.kts
appinventor/common-utils/: build.gradle.kts
appinventor/common-version/: CommonVersion.gwt.xml  build.gradle.kts
appinventor/component-annotations/: build.gradle.kts
appinventor/component-constants/: CommonConstants.gwt.xml  build.gradle.kts
appinventor/component-scripts/: build.gradle.kts
appinventor/components/: BUILD.bazel  build.gradle  build.gradle.kts  build.xml
appinventor/components/src/: AndroidManifest.xml
appinventor/components/src/com/google/appinventor/components/annotations/: DesignerComponent.java  DesignerProperty.java  SimpleBroadcastReceiver.java  SimpleEvent.java  SimpleFunction.java  SimpleObject.java  SimpleProperty.java  SimplePropertyCopier.java  UsesActivities.java  UsesAssets.java  UsesBroadcastReceivers.java  UsesLibraries.java  UsesNativeLibraries.java  UsesPermissions.java
appinventor/components/src/com/google/appinventor/components/annotations/androidmanifest/: ActionElement.java  ActivityElement.java  CategoryElement.java  DataElement.java  MetaDataElement.java  ReceiverElement.java
appinventor/components/src/com/google/appinventor/components/common/: ComponentCategory.java
appinventor/components/src/com/google/appinventor/components/runtime/: AccelerometerSensor.java  BarcodeScanner.java  BluetoothClient.java  BluetoothServer.java  ButtonBase.java  Camcorder.java  Camera.java  Canvas.java  CloudDB.java  ContactPicker.java  EmailPicker.java  Ev3Commands.java  Ev3Sound.java  Ev3UI.java  File.java  FirebaseDB.java  Form.java  FusiontablesControl.java  GameClient.java  Image.java  ImagePicker.java  ImageSprite.java  Label.kt  ListPicker.java  Map.java  Marker.java  MediaStore.java  NearField.java  NxtDirectCommands.java  PhoneCall.java  Player.java  RadioButton.java  Sharing.java  Sound.java  SoundRecorder.java  Texting.java  TinyWebDB.java  Twitter.java  VideoPlayer.java  Voting.java  (+3 more)
appinventor/components/src/com/google/appinventor/components/runtime/util/: AssetFetcher.java  JsonUtil.java  KitkatUtil.java  PaintUtil.java  ViewUtil.java
appinventor/components/src/com/google/appinventor/components/scripts/: ComponentDescriptorGenerator.java  ComponentProcessor.java  ComponentTranslationGenerator.java
appinventor/components/src/com/srlane/: MockSimpleLabel2.js  SimpleLabel2.java
appinventor/components/src/main/: AndroidManifest.xml
appinventor/components/src/main/java/com/google/appinventor/components/runtime/: CloudDB.java  ReplForm.java  Web.java
appinventor/components/src/main/java/com/google/appinventor/components/runtime/util/: GeometryUtil.java  MapFactory.java  NativeOpenStreetMapController.java
appinventor/components/src/test/java/com/google/appinventor/components/runtime/: MapTest.java
appinventor/lib/: BUILD.bazel
appinventor/utils/: build.gradle.kts
buildserver/: build.gradle
common/: build.gradle
components/: build.gradle
components-annotations/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
