java_binary(
    name = "BlocklyTranslationGenerator",
    srcs = [
        "src/msg/BlocklyTranslationGenerator.java",
    ],
    main_class = "msg.BlocklyTranslationGenerator",
    visibility = ["//appinventor/appengine:__pkg__"],
    deps = [
        "//appinventor/lib:LocalJarsForBlocklyTranslationGenerator",
    ],
)

exports_files(
    ["ploverConfig.js"],
    visibility = ["//appinventor/appengine:__pkg__"],
)
