java_binary(
    name = "main",
    srcs = glob(["src/**/*.java"]),
    main_class = "com.google.appinventor.buildserver.Main",
    deps = glob(["libs/*.jar"]) + [
        "@maven//:args4j_args4j",
        "@maven//:com_android_tools_build_builder",
        "@maven//:com_android_tools_build_builder_model",
        "@maven//:com_android_tools_common",
        "@maven//:com_android_tools_sdk_common",
        "@maven//:com_android_tools_sdklib",
        "@maven//:com_google_guava_guava",
        "@maven//:com_sun_grizzly_grizzly_http",
        "@maven//:com_sun_jersey_jersey_bundle",
        "@maven//:commons_io_commons_io",
        "@maven//:javax_ws_rs_jsr311_api",
        "@maven//:org_bouncycastle_bcpkix_jdk15on",
        "@maven//:org_bouncycastle_bcprov_jdk15on",
        "@maven//:org_codehaus_jettison_jettison",
        "@maven//:org_eclipse_jdt_core_compiler_ecj",
        "@maven//:org_json_json",
        "//appinventor/common:CommonVersion",
        "//appinventor/common:CommonUtils",
        "//appinventor/components:CommonConstants",
    ],
)
