load("@bazel_skylib//rules:expand_template.bzl", "expand_template")

expand_template(
    name = "GitBuildId",
    out = "GitBuildId.java",
    substitutions = {
        "@git.build.version@": "0.0.1",
        "@git.build.fingerprint@": "0.0.1",
        "@ant.build.date@": "2019-01-01",
    },
    template = "GitBuildId.template",
)

java_library(
    name = "CommonVersion",
    srcs = glob(["src/com/google/appinventor/common/version/*.java"]) + [":GitBuildId"],
    visibility = [
        "//appinventor/buildserver:__pkg__",
        "//appinventor/components:__pkg__",
    ],
)

java_library(
    name = "CommonUtils",
    srcs = glob(["src/com/google/appinventor/common/utils/*.java"]),
    visibility = [
        "//appinventor/buildserver:__pkg__",
        "//appinventor/components:__pkg__",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)
