load("@bazel_skylib//rules:expand_template.bzl", "expand_template")

expand_template(
    name = "GitBuildId",
    out = "src/com/google/appinventor/common/version/GitBuildId.java",
    substitutions = {
        "@git.build.version@": "0.0.1",
        "@git.build.fingerprint@": "0.0.1",
        "@ant.build.date@": "2019-01-01",
    },
    template = "GitBuildId.template",
)

java_library(
    name = "CommonVersion",
    srcs = glob(["src/com/google/appinventor/common/version/*.java"]) + [
        ":GitBuildId",
    ],
    resource_strip_prefix = "appinventor/common/src",
    resources = glob(["src/com/google/appinventor/common/version/*.java"]) + [
        ":GitBuildId",
        "src/com/google/appinventor/common/CommonVersion.gwt.xml",
    ],
    visibility = [
        "//appinventor/appengine:__pkg__",
        "//appinventor/buildserver:__pkg__",
        "//appinventor/components:__pkg__",
    ],
)

java_library(
    name = "CommonUtils",
    srcs = glob(["src/com/google/appinventor/common/utils/*.java"]),
    resource_strip_prefix = "appinventor/common/src",
    resources = glob(["src/com/google/appinventor/common/utils/*.java"]) + [
        "src/com/google/appinventor/common/CommonUtils.gwt.xml",
    ],
    visibility = [
        "//appinventor/appengine:__pkg__",
        "//appinventor/buildserver:__pkg__",
        "//appinventor/components:__pkg__",
    ],
    deps = [
        "@maven//:com_google_guava_guava",
    ],
)
