load("@com_github_johnynek_bazel_jar_jar//:jar_jar.bzl", "jar_jar")

java_library(
    name = "CommonConstants",
    srcs = glob(
        ["src/com/google/appinventor/components/common/*.java"],
        exclude = ["src/com/google/appinventor/components/common/HtmlEntities.java"],
    ),
    visibility = ["//appinventor/buildserver:__pkg__"],
)

java_library(
    name = "HtmlEntities",
    srcs = glob(["src/com/google/appinventor/components/common/HtmlEntities.java"]),
)

android_library(
    name = "Barcode",
    srcs = glob(["src/com/google/zxing/client/android/**/*.java"]),
    deps = [
        "@maven//:com_google_zxing_core",
    ],
)

java_plugin(
    name = "ComponentDescriptorGenerator",
    srcs = glob([
        "src/com/google/appinventor/components/scripts/*.java",
        "src/com/google/appinventor/components/annotations/*.java",
        "src/com/google/appinventor/components/annotations/androidmanifest/*.java",
    ]),
    generates_api = True,
    processor_class = "com.google.appinventor.components.scripts.ComponentDescriptorGenerator",
    deps = [
        ":CommonConstants",
        "//appinventor/common:CommonUtils",
        "@maven//:com_google_guava_guava",
        "@maven//:org_json_json",
    ],
)

java_plugin(
    name = "ComponentListGenerator",
    srcs = glob([
        "src/com/google/appinventor/components/scripts/*.java",
        "src/com/google/appinventor/components/annotations/*.java",
        "src/com/google/appinventor/components/annotations/androidmanifest/*.java",
    ]),
    processor_class = "com.google.appinventor.components.scripts.ComponentListGenerator",
    deps = [
        ":CommonConstants",
        "//appinventor/common:CommonUtils",
        "@maven//:com_google_guava_guava",
        "@maven//:org_json_json",
    ],
)

java_plugin(
    name = "ComponentTranslationGenerator",
    srcs = glob([
        "src/com/google/appinventor/components/scripts/*.java",
        "src/com/google/appinventor/components/annotations/*.java",
        "src/com/google/appinventor/components/annotations/androidmanifest/*.java",
    ]),
    processor_class = "com.google.appinventor.components.scripts.ComponentTranslationGenerator",
    deps = [
        ":CommonConstants",
        "//appinventor/common:CommonUtils",
        "@maven//:com_google_guava_guava",
        "@maven//:org_json_json",
    ],
)

java_plugin(
    name = "MarkdownDocumentationGenerator",
    srcs = glob([
        "src/com/google/appinventor/components/scripts/*.java",
        "src/com/google/appinventor/components/annotations/*.java",
        "src/com/google/appinventor/components/annotations/androidmanifest/*.java",
    ]),
    processor_class = "com.google.appinventor.components.scripts.MarkdownDocumentationGenerator",
    deps = [
        ":CommonConstants",
        "//appinventor/common:CommonUtils",
        "@maven//:com_google_guava_guava",
        "@maven//:org_json_json",
    ],
)

jar_jar(
    name = "shaded_json_lib",
    inline_rules = ["rule org.json.** com.google.appinventor.components.runtime.repackaged.@0"],
    input_jar = "@maven//:org_json_json",
)

android_library(
    name = "AndroidRuntime",
    srcs = glob([
        "src/com/google/appinventor/components/runtime/**/*.java",
        "src/com/google/appinventor/components/annotations/**/*.java",
    ]),
    #    javacopts = ["-XepDisableAllChecks"],
    plugins = [
        ":ComponentDescriptorGenerator",
        ":ComponentListGenerator",
        ":ComponentTranslationGenerator",
        ":MarkdownDocumentationGenerator",
    ],
    deps = [
        ":Barcode",
        ":CommonConstants",
        ":HtmlEntities",
        ":shaded_json_lib",
        "//appinventor/common:CommonVersion",
        "//appinventor/lib:LocalJarsForAndroidRuntime",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_cardview_cardview",
        "@maven//:androidx_core_core",
        "@maven//:androidx_recyclerview_recyclerview",
        "@maven//:ch_acra_acra",
        #        "@maven//:com_caverock_androidsvg_aar",
        "@maven//:com_firebase_firebase_client_android",
        "@maven//:com_firebase_firebase_client_jvm",
        "@maven//:com_github_PhilJay_MPAndroidChart",
        "@maven//:com_google_api_client_google_api_client",
        "@maven//:com_google_api_client_google_api_client_android",
        "@maven//:com_google_apis_google_api_services_fusiontables",
        "@maven//:com_google_apis_google_api_services_sheets",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_http_client_google_http_client",
        "@maven//:com_google_http_client_google_http_client_jackson2",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_apache_httpcomponents_httpclient",
        "@maven//:org_apache_httpcomponents_httpcore",
        "@maven//:org_apache_httpcomponents_httpmime",
        "@maven//:org_locationtech_jts_jts_core",
        #        "@maven//:org_osmdroid_osmdroid_android",
        "@maven//:org_twitter4j_twitter4j_core",
        "@maven//:redis_clients_jedis",
    ],
)
